<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.profileFragment">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/title_Profile"
                android:textColor="#232323"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/man"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleProfile" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Your Name"
                android:textColor="#1E1E1E"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                app:layout_constraintStart_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toBottomOf="@+id/profileImage" />

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="your Email"
                android:textColor="#1E1E1E"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/nameText"
                app:layout_constraintStart_toStartOf="@+id/nameText"
                app:layout_constraintTop_toBottomOf="@+id/nameText" />

            <TextView
                android:id="@+id/viewRoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/roll_Num_Profile"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailText" />

            <TextView
                android:id="@+id/rollText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Roll_num"
                android:textColor="#1E1E1E"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/viewRoll"
                app:layout_constraintTop_toBottomOf="@+id/viewRoll" />

            <TextView
                android:id="@+id/viewBatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/batch_Profile"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rollText" />

            <TextView
                android:id="@+id/batchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Batch"
                android:textColor="#1E1E1E"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/viewBatch"
                app:layout_constraintTop_toBottomOf="@+id/viewBatch" />

            <TextView
                android:id="@+id/viewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/gender_Profile"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/batchText" />

            <TextView
                android:id="@+id/genderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Gender"
                android:textColor="#1E1E1E"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/viewGender"
                app:layout_constraintTop_toBottomOf="@+id/viewGender" />

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/plus"
                app:layout_constraintBottom_toBottomOf="@+id/profileImage"
                app:layout_constraintEnd_toEndOf="@+id/profileImage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logOutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/logOutButton_Profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>