<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8E8E8">

            <TextView
                android:id="@+id/bookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:text="TextView"
                android:textColor="#303030"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/viewQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/title_quantity"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/bookName"
                app:layout_constraintTop_toBottomOf="@+id/bookName" />

            <TextView
                android:id="@+id/viewReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_return"
                app:layout_constraintBottom_toBottomOf="@+id/viewIssue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewIssue"
                app:layout_constraintTop_toTopOf="@+id/viewIssue"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/viewIssue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/title_issue"
                app:layout_constraintBottom_toBottomOf="@+id/viewQuantity"
                app:layout_constraintStart_toEndOf="@+id/viewQuantity"
                app:layout_constraintTop_toTopOf="@+id/viewQuantity" />

            <TextView
                android:id="@+id/returnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="TextView"
                android:textColor="#303030"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/viewReturn"
                app:layout_constraintTop_toBottomOf="@+id/viewReturn" />

            <TextView
                android:id="@+id/quantityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="TextView"
                android:textColor="#303030"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/viewQuantity"
                app:layout_constraintTop_toBottomOf="@+id/viewQuantity" />

            <TextView
                android:id="@+id/issueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="TextView"
                android:textColor="#303030"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/viewIssue"
                app:layout_constraintTop_toBottomOf="@+id/viewIssue" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>